objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>DOS_VP_Approved_Discount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DOS/VP Approved Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DS_SLS_DocuSign_Envelope_ID__c</fullName>
        <label>DocuSign Envelope ID</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dash_Group__c</fullName>
        <label>Dash Group</label>
        <picklist>
            <picklistValues>
                <fullName>Mercury Pay</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Field used in Data Quality Score calculation and image.</inlineHelpText>
        <label>Data Quality Count</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IMAGE(CASE(  Data_Quality_Count__c ,
6, &quot;/img/samples/stars_500.gif&quot;, 
5, &quot;/img/samples/stars_500.gif&quot;, 
4, &quot;/img/samples/stars_400.gif&quot;, 
3, &quot;/img/samples/stars_300.gif&quot;, 
2, &quot;/img/samples/stars_300.gif&quot;, 
1, &quot;/img/samples/stars_100.gif&quot;,
0, &quot;/img/samples/stars_000.gif&quot;, 
null), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>5 star score based on data entered on Opportunity.</inlineHelpText>
        <label>Data Quality Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Demo_Completed__c</fullName>
        <inlineHelpText>Actual Date the Demo was performed</inlineHelpText>
        <label>Date Demo Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Demo_Scheduled__c</fullName>
        <inlineHelpText>Date the actual demo was scheduled</inlineHelpText>
        <label>Date Demo Scheduled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Submitted_to_SOS__c</fullName>
        <label>Date Submitted to SOS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Jacket_Completion_Date__c</fullName>
        <label>Deal Jacket/SQT Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_State_ID__c</fullName>
        <label>Deal State ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Permission_to_Engage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dealer Permission to Engage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_Prioritized_Pain__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dealer Prioritized Pain</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_Provided_access_to_Key_Player_s__c</fullName>
        <label>Dealer Provided access to Key Player(s)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dealer_provided_goals_challenges__c</fullName>
        <label>Dealer provided goals &amp; challenges</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Debugging__c</fullName>
        <label>Debugging</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Language__c</fullName>
        <label>Delivery Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Demo_Status_Date__c</fullName>
        <label>Demo Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Demo_Status__c</fullName>
        <label>Demo Status</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Targeted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Demonstration_Completed__c</fullName>
        <label>Demonstration Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Device_Worksheet_Upload_Date__c</fullName>
        <inlineHelpText>Please remember to attach the Device Worksheet in the Notes &amp; Attachments section at the Account, not the Opportunity.</inlineHelpText>
        <label>Device Worksheet (Upload Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Difficulty__c</fullName>
        <label>Difficulty</label>
        <picklist>
            <picklistValues>
                <fullName>Easy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Digital_Advertising_QC__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>QC to be forecasted by the specific channel.</inlineHelpText>
        <label>Digital Advertising QC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Digital_Marketing_QC__c</fullName>
        <label>Digital Marketing QC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Digital_Solution_Needs__c</fullName>
        <label>Digital Solution Needs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Digital_Solutions_QC_Total__c</fullName>
        <inlineHelpText>Formula based on the Products you add under &quot;Product QC&quot;</inlineHelpText>
        <label>Digital Solutions NewQ Total</label>
        <summarizedField>Product_QC__c.Actual_QC__c</summarizedField>
        <summaryForeignKey>Product_QC__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Discovery1__c</fullName>
        <label>Discovery Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discovery__c</fullName>
        <label>Discovery</label>
        <picklist>
            <picklistValues>
                <fullName>Targeted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discovery_with_Client_Completed__c</fullName>
        <label>Discovery with Client Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ELF_Affected_Departments__c</fullName>
        <label>ELF - Affected Departments</label>
        <picklist>
            <picklistValues>
                <fullName>Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Car/Truck Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F&amp;I Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Used Car/Truck Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Body Shop</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ELF_Color_Lasers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ELF - Color Lasers?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ELF_Forms_Requested_For_Resdesign__c</fullName>
        <label>ELF - Forms Requested For Resdesign</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ELF_Lasers__c</fullName>
        <label>ELF - # Lasers</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ELF_Other_Applications_Sold__c</fullName>
        <label>ELF - Other Applications Sold</label>
        <picklist>
            <picklistValues>
                <fullName>CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F&amp;I Laser Station</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Touch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>etc</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ELF_Primary_User__c</fullName>
        <label>ELF - Primary User</label>
        <picklist>
            <picklistValues>
                <fullName>Parts Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounting Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Office Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Car/Truck Sales Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F&amp;I Office Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Used Car/Truck Sales Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Body Shop Manager</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ELF_ROI_Needs_Pain__c</fullName>
        <label>ELF - ROI/Needs/Pain</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ELF_Sales_Decision_Maker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ELF - Sales Decision Maker</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Sales Decision Maker)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ELF_System_Comments__c</fullName>
        <inlineHelpText>List Operating System, DSDA Components, etc.</inlineHelpText>
        <label>ELF - System Comments</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ELF_System_Requirements_Met__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ELF - System Requirements Met</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ELF_Trigger_Equations__c</fullName>
        <label>ELF - Trigger Equations</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ELF_Trigger_Forms_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ELF - Trigger Forms Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Established_Purchase_Timeline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Established Purchase Timeline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Evaluate_Comments__c</fullName>
        <label>Evaluate Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Existing_Item_s_this_is_replacing__c</fullName>
        <inlineHelpText>What Existing Item(s) is this Add-On replacing?</inlineHelpText>
        <label>Existing Item(s) this is replacing?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Consultant_Involved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>External Consultant Involved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>F_I_Color_Lasers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>F&amp;I Color Lasers?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>F_I_Forms_Analysis_Comments__c</fullName>
        <inlineHelpText>Forms Gathered, # Can be done, # Can&apos;t be done, # of Alt.</inlineHelpText>
        <label>F&amp;I Forms Analysis Comments</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_I_Forms_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>F&amp;I Forms Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>F_I_Forms_Gathered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>F&amp;I Forms Gathered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>F_I_Lasers__c</fullName>
        <label>F&amp;I # Lasers</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>F_I_ROI_Needs_Pain__c</fullName>
        <label>F&amp;I ROI/Needs/Pain</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>F_I_System_Comments__c</fullName>
        <inlineHelpText>List Operating System, DSDA Components, etc.</inlineHelpText>
        <label>F&amp;I System Comments</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_I_System_Requirements_Met__c</fullName>
        <defaultValue>false</defaultValue>
        <label>F&amp;I System Requirements Met</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>F_I_Users__c</fullName>
        <label>F&amp;I # Users</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fight_For_First__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fight For First</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Forecasting_Comments__c</fullName>
        <label>Forecasting Comments</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>From_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This Opportunity came from (or is associated with this Lead record).</inlineHelpText>
        <label>From Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Has_Activity__c</fullName>
        <formula>LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Activity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>How_to_Change_course_to_win__c</fullName>
        <label>How to Change course to win</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IPT_Type__c</fullName>
        <label>IPT Type</label>
        <picklist>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hosted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ISR_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ISR Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ISR_QC__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>QC to be forecasted by the specific channel.</inlineHelpText>
        <label>ISR QC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IS_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IS Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>IS_Product__c.IsActive__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>IS_Product__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Identify_Competitor_1_Quoting__c</fullName>
        <label>Identify Competitor 1 Quoting</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identify_Competitor_2_Quoting__c</fullName>
        <label>Identify Competitor 2 Quoting</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identify_Competitor_3_Quoting__c</fullName>
        <label>Identify Competitor 3 Quoting</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identify_Consultant__c</fullName>
        <label>Identify Consultant</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identify_Key_Decision_Maker_s__c</fullName>
        <label>Identify Key Decision Maker(s)</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identify_Mobilizer_s__c</fullName>
        <label>Identify Mobilizer(s)</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identify_Objections__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Identify Objections</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inactive_Cancelled_Reason__c</fullName>
        <label>Inactive/Cancelled Reason</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Stalled - No Decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Longer Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate Entry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Created in Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Initial_Closing_Meeting__c</fullName>
        <label>Initial Closing Meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Meeting_Executive_Overview_Compl__c</fullName>
        <inlineHelpText>Initial Meeting/Executive Overview Completed</inlineHelpText>
        <label>Initial Meeting/Executive Overview Compl</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inside_Sales_Lead_Source__c</fullName>
        <label>Inside Sales Lead Source</label>
        <picklist>
            <picklistValues>
                <fullName>EML - ES Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IML - ACE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IML - Add On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IML - ADP Call Tracking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IML - Auction Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IML - BZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IML - Chrysler EVIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IML - Credit Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IML - CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IML - CT Wizard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IML - Curomax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IML - Customer Int Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IML - Customer Touch - Minority Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IML - CustomerTouch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IML - CVR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IML - Data Fresh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IML - Deal Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IML - Dealer Programming Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IML - Dealermail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IML - Decision Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IML - Dell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IML - Digital Contracting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IML - Document Scanning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IML - Dynamic Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IML - E Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IML - eContracting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IML - Email Append</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IML - ETT- ETC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IML - F &amp; I Laser Station</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IML - FSDD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Internal_Lead_Contact__c</fullName>
        <label>Internal Lead Contact</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Lead_Source__c</fullName>
        <label>Internal Lead Source</label>
        <picklist>
            <picklistValues>
                <fullName>Action Alert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Ad Spend Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eCare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inside</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NADA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Dealership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PASCH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ProCare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RepMan Spl</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Introduce_ARM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Introduce ARM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_any_item_product_that_is_being_sold__c</fullName>
        <inlineHelpText>Is any item /product that is being sold with this opportunity replacing an existing item?</inlineHelpText>
        <label>Is product replacing an existing item?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_CRS_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead CRS User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Notes__c</fullName>
        <description>Use this area to enter notes associated to a lead.</description>
        <inlineHelpText>Use this area to enter notes associated to a lead.</inlineHelpText>
        <label>Lead Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>List_Price_Total__c</fullName>
        <label>List Price Total</label>
        <summarizedField>OpportunityLineItem.ListPrice</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Lost_Reason__c</fullName>
        <label>Lost Reason</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>ADP Price Too High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADP Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADP Support Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Class Exercise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitive Pricing Leverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitive Product Features</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealership Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disengaged-Cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disengaged-CPD Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disengaged-Left Message</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disengaged-No Interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disengaged-Not User-Friendly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disengaged-Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disengaged-Proquest Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disengaged-Required Multiple OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Install Timeline Unavailable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insufficient Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost Interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Reason Given</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lost_to_Whom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lost to Whom?</label>
        <referenceTo>Competitors__c</referenceTo>
        <relationshipLabel>Competitor Associated to This Opportunity</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MSA_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MSA Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Migration_Team__c</fullName>
        <label>Migration Team</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NADA_Swipe__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NADA Swipe</label>
        <referenceTo>NADA_Swipe__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NS_Document_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>N/S Document Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Call_Handling_Process_Outlined__c</fullName>
        <label>New Call Handling Process Outlined</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Closing_Meeting_Scheduled__c</fullName>
        <label>Next Closing Meeting Scheduled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Closing_Meeting__c</fullName>
        <label>Next Closing Meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <label>Next Steps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Next_follow_up_date__c</fullName>
        <label>Next follow-up date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_Price_Proposal_Date__c</fullName>
        <label>No Price Proposal Presented</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_Price_Proposal__c</fullName>
        <label>No Price Proposal</label>
        <picklist>
            <picklistValues>
                <fullName>Targeted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Non_Standard_Addendum_Description__c</fullName>
        <label>Non-Standard Addendum Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Num_of_Influencer__c</fullName>
        <label>Num of Influencer</label>
        <summaryForeignKey>Opportunity_Influencers__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_Of_Solution_Designs__c</fullName>
        <description>Number of Completed Solution Designs for this opportunity.</description>
        <inlineHelpText>Number of Completed Solution Designs for this opportunity.</inlineHelpText>
        <label>Number Of Completed Solution Designs</label>
        <summaryFilterItems>
            <field>Solution_Design__c.Completed__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Solution_Design__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OEM_Dealer_Code__c</fullName>
        <label>OEM Dealer Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
</CustomObject>